# istp-shortcut

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: lint.yml  pull_request_template.md  test.yml
migrations/: 20241016075010_create_command_table.down.sql  20241016075010_create_command_table.up.sql
src/: lib.rs  main.rs
src/app/: state.rs
src/arg/: cli.rs
src/command/: base.rs  mod.rs  save.rs
src/common/: constants.rs  debug.rs
src/database/: common.rs
src/database/sqlite/: command.rs  db.rs
